Fixed #91 - Style sheet will no longer wrap the fields element

--- a/app/assets/stylesheets/themes/wine.scss
+++ b/app/assets/stylesheets/themes/wine.scss
@@ -139,13 +139,16 @@ section.flash{
 	    height:10em;
 	}
 	.fields{
+	    display:flex;
 	    width:100%;
 	    min-width:0px;
-	    flex-wrap:wrap;
+	    flex-wrap:no-wrap;
 	    margin-bottom:1em;
 	}
     }
 }
+
+
 .select2-selection, .select2-dropdown,.select2-container,{
     background-color:$body-2;
     border:1px solid $body-1;
